notes-app/notes-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: notes-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
       labels:
         app: notes-app
    spec:
      containers:
        - name: notes-app-container
          image: dhanu1996/notes-app:v2
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1000m"
              memory: "500Mi"
            requests:
              cpu: "700m"
              memory: "400Mi"
            
---
apiVersion: v1
kind: Service 
metadata:
  name: notes-app-service
spec: 
  selector: 
    app: notes-app
  type: NodePort
  ports: 
    - port: 80
      targetPort: 5000
      nodePort: 30008
