notes-app/notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: notes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: notes-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-app-service
                port:
                  number: 5000
